1.11.1 (2018-??-??)
  * Fix 'power.roc.curve' failed with curves having 'percent=TRUE'

1.11.0 (2018-03-24)
  * Added argument 'legacy.axes' to 'ggroc'
  * Fix NOTE about 'apparent S3 methods exported but not registered' in 'R CMD check'

1.10.0 (2017-06-10)
  * Basic ggplot2 support (one and multiple ROC curves)
  * Implement 'precision' and 'recall' for 'coords'
  * Fix: properly handle NAs in cases when passing cases/controls to 'roc' (thanks Thomas König for the report)
  * Fix various minor bugs detected with new unit tests
  
 1.9.1 (2017-02-05)
  * Fix: 'subset' and 'na.action' arguments now handled properly in 'roc.formula' (thanks Terry Therneau for the report)
  * Added policies to handle the case where a ROC curve has multiple "best" threshold in 'ci' (thanks Nicola Toschi for the report)
  * Support 'xlim' and 'ylim' gracefully in 'plot.roc'
  * Improved validation of input class 'levels' and 'direction'; messages when auto-detecting, use 'quiet' to turn on
  * Removed extraneous 'name' attribute on the 'p.value' (thanks Paweł Kleka for the report)
  * Faster DeLong algorithm (code contributed Stefan Siegert)

1.8 (2015-05-04)
  * NAMESPACE now properly exports the methods as S3 methods.
  * Now uses and works with 'requireNamespace'
  * Add ability to supply two ordered factors with identical levels as control / cases
  * Deprecate dangerous use of a matrix as response / predictor with a warning
  * Forward 'best.method' and 'best.weights' arguments to 'coords' in 'ci.thresholds'
  * Fix CITATION file as per CRAN request
  * pAUC correction is undefined for partial AUC below the diagonal (result < 0.5) and now returns NA (with a warning). Thanks Vincenzo Lagani for the report.

1.7.3 (2014-06-14)
  * Fixed AUC of binomial-smoothed ROC off by 100^2 (thanks Bao-Li Chang for the report)
  * Fix print of logcondens-smoothed ROC

1.7.2 (2014-04-05)